# mangetsu

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md
cmake/: .cpack_ignore  Install.cmake  Package.cmake  install_cfg.cmake
cmake/postinstall/: AddToPathWin.cmake  AddToPathWin.ps1  AddToPathWin32.cmake  CMakeLists.txt
cmake/postinstall/win/: Add-Path.ps1
include/mg/util/: endian.hpp
src/data/: mrg.cpp  mzp.cpp
src/tools/: data_explorer.cpp  hfa_extract.cpp  mrg_extract.cpp  mrg_info.cpp  mzp_compress.cpp  mzp_extract.cpp  mzp_info.cpp  repack_script_text_translation.cpp
src/util/: fs.cpp
